design-principles-02/src/main/java/com/farhad/example/design_principles02/rock_paper_scissors_game/bad/GameObject.java
package com.farhad.example.design_principles02.rock_paper_scissors_game.bad;

public interface GameObject {
	boolean beats(GameObject gameObject);
}
